# VoiceDrivenFinanceSystem

./: .dockerignore  .gitignore  LICENSE  README.md  code.txt  dockerfile  main.py  pyproject.toml  requirements.txt
app/: main.py  main1.py
app/ai/: parser.py
app/api/: deps.py
app/api/routes/: __init__.py  voice.py
app/audit/: logger.py
app/auth/: __init__.py  security.py  test_auth.py
app/cache/: __init__.py  redis_client.py  state_store.py  test_redis.py
app/db/: models.py  seed_user.py  session.py  test_db.py  test_services.py
app/db/migrations/: env.py
app/db/migrations/versions/: 10d6a0ff160f_fix_transaction_amount_column.py  93b03ce10a5d_initial_schema.py  a6ab481c6d36_rename_transaction_limit_to_amount.py  fa61fc6c8435_rename_transaction_limit_to_amount.py
app/intent/: __init__.py  detector.py  slots.py  state.py
app/services/: __init__.py  budgets.py  reminders.py  transactions.py
app/utils/: __init__.py  validation.py
app/voice/: audio_preprocess.py  recorder.py  stt.py  test_stt.py  test_tts.py  tts.py
tests/: test_intents.py  test_validation.py  test_voice_flow.py
